# AgentTest

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
docs/: ASSIGNMENT.md  assignment-constraints.md  presentation.html  (+4 more)
engine/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
engine/configs/: agents.yaml  owasp.yaml
engine/eval/: .gitignore  __init__.py  ablation.py  compare.py  preflight.py  results.py  runner.py
engine/eval/injections/: __init__.py  base.py  llm01_remove_sanitization.py  llm02_drop_redaction.py  llm06_add_unannounced_write.py
engine/eval/results/: comparison-2026-05-06T19-26-58.json  run-baseline-2026-05-06T19-26-58.json  run-pipeline-2026-05-06T19-20-58.json
engine/eval/runner-helper/: .gitignore  README.md  TestRunner.java  setup.py
engine/eval/runner-helper/smoke/: RestaurantPromptAssemblerAgentGenTest.java  RestaurantPromptAssemblerSecurityGenTest.java
engine/eval/runner-helper/stubs/com/example/test/: TestLogHandler.java
engine/eval/samples/spring_ai/: AgentLogger.java  EmailDraftingAssembler.java  MenuMcpServer.java  PersonaPromptCustomizer.java  RagContextBuilder.java  RequestAuditTrail.java  RestaurantPromptAssembler.java  WeatherTool.java  agent_logger.meta.yaml  email_drafting_assembler.meta.yaml  menu_mcp_server.meta.yaml  persona_prompt_customizer.meta.yaml  rag_context_builder.meta.yaml  request_audit_trail.meta.yaml  restaurant_prompt_assembler.meta.yaml  weather_tool.meta.yaml
engine/src/agenttest/: __main__.py  cli.py  config.py  contracts.py  main.py  pipeline.py
engine/src/agenttest/adapters/: registry.py
engine/src/agenttest/agents/: __init__.py  client.py  dependencies.py  factory.py  properties.py  role.py
engine/src/agenttest/aggregator/: emit.py
engine/src/agenttest/analyzer/: ast_parser.py  identify.py
engine/src/agenttest/baseline/: __init__.py  synthesize.py
engine/src/agenttest/generator/: prompt.py  synthesize.py
engine/src/agenttest/http/: routes.py
engine/src/agenttest/retrieval/: owasp.py
engine/src/agenttest/validator/: gate.py  parse.py  run.py
engine/tests/: test_ablation.py  test_agents.py  test_aggregator.py  test_analyzer.py  test_baseline.py  test_compare.py  test_eval_preflight.py  test_eval_runner.py  test_generator.py  test_health.py  test_injections.py  test_owasp_loader.py  test_pipeline_e2e.py  test_runner_helper.py  test_validator.py
engine/tests/fixtures/: RestaurantPromptAssembler.java
(+40 files in other folders)
