[project]
name = "agenttest"
version = "0.1.0"
description = "Security-aware unit test generator for Java AI agent code (Spring AI / LangChain4j / MCP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "typer>=0.12",
    "javalang>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
