[project]
name = "agenttest"
version = "0.1.0"
description = "Security-aware unit test generator for Java AI agent code (Spring AI / LangChain4j / MCP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "typer>=0.12",
    "javalang>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade (catches old `Dict` / `List` / `Optional`)
    "A",    # flake8-builtins (catches `input` shadowing, etc.)
    "PT",   # pytest style
]
ignore = [
    "E501",  # line-too-long: handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["A002"]                     # test fixtures occasionally shadow builtins
"src/agenttest/cli.py" = ["B008"]              # Typer idiom: call typer.Argument/Option in defaults
"src/agenttest/http/routes.py" = ["B008"]      # FastAPI idiom: call Depends() in defaults

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
